[mvc] add ui